--- a/phazor/appsettings.json
+++ b/phazor/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "DogCeo": {
+    "BaseUrl": "https://dog.ceo/api/",
+    "GetBreedsListAllUrl": "breeds/list/all",
+    "GetBreedInfoUrl": "breeds/{0}/",
+    "GetRandomDogImagesUrl": "https://dog.ceo/api/breeds/image/random/{count}"
+  },
   "AllowedHosts": "*"
 }
