--- a/phazor/phazor.csproj
+++ b/phazor/phazor.csproj
@@ -3,6 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Copyright>Michael Mahon</Copyright>
+    <Company>m13.io</Company>
+    <Authors>M. Mahon</Authors>
+    <Version>0.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
